feat: 変更履歴を自動化

--- a/config/templates/README.en.md.ejs
+++ b/config/templates/README.en.md.ejs
@@ -4,7 +4,7 @@
 <% if (content.screenshots?.length > 0) { -%>
 
 <% content.screenshots.forEach((screenshot) => { -%>
-[<%- screenshot['name:en'] %>]
+![<%- screenshot['name:en'] %>]
 <% }); -%>
 <%- content.screenshots.map((screenshot) => `©${screenshot.copyright}`).join(' ') %>
 <% } -%>
